# playwright-in-docker

./: .env-example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  start.sh
article/: Story.md
src/: config.py  main.py
ubuntu-vnc/: Dockerfile  docker-compose.yml  start.sh
