[project]
name = "playwright-in-docker"
version = "0.1.0"
description = ""
authors = [
    {name = "C0ldM2n",email = "68183908+C0ldM2n@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright (>=1.50.0,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
